[socket process] MOZ_CRASH(Transition error) at ipc/glue/ProtocolUtils.cpp:269
Categories
(Core :: Networking, defect, P2)
Tracking
()
People
(Reporter: kershaw, Assigned: kershaw)
References
(Blocks 1 open bug)
Details
(Whiteboard: [necko-triaged])
Attachments
(1 file)
Hit this when running test netwerk/test/unit/test_websocket_offline.js.
Stacktrace:
Hit MOZ_CRASH(Transition error) at /Users/changkershaw/work/central/ipc/glue/ProtocolUtils.cpp:269
#01: mozilla::net::PDNSRequestChild::SendLookupCompleted(mozilla::net::DNSRequestResponse const&)[/Users/changkershaw/work/central/obj-x86_64-apple-darwin17.7.0/dist/NightlyDebug.app/Contents/MacOS/XUL +0x9c7612]
#02: mozilla::net::DNSRequestHandler::DoAsyncResolve(nsTSubstring<char> const&, mozilla::OriginAttributes const&, unsigned int)[/Users/changkershaw/work/central/obj-x86_64-apple-darwin17.7.0/dist/NightlyDebug.app/Contents/MacOS/XUL +0x3272ed]
#03: mozilla::net::SocketProcessChild::AllocPDNSRequestChild(nsTString<char> const&, mozilla::OriginAttributes const&, unsigned int const&)[/Users/changkershaw/work/central/obj-x86_64-apple-darwin17.7.0/dist/NightlyDebug.app/Contents/MacOS/XUL +0x790a9a]
#04: mozilla::net::PSocketProcessChild::OnMessageReceived(IPC::Message const&)[/Users/changkershaw/work/central/obj-x86_64-apple-darwin17.7.0/dist/NightlyDebug.app/Contents/MacOS/XUL +0xbea60a]
#05: mozilla::ipc::MessageChannel::DispatchAsyncMessage(IPC::Message const&)[/Users/changkershaw/work/central/obj-x86_64-apple-darwin17.7.0/dist/NightlyDebug.app/Contents/MacOS/XUL +0x89bb19]
#06: mozilla::ipc::MessageChannel::DispatchMessage(IPC::Message&&)[/Users/changkershaw/work/central/obj-x86_64-apple-darwin17.7.0/dist/NightlyDebug.app/Contents/MacOS/XUL +0x899d94]
#07: mozilla::ipc::MessageChannel::RunMessage(mozilla::ipc::MessageChannel::MessageTask&)[/Users/changkershaw/work/central/obj-x86_64-apple-darwin17.7.0/dist/NightlyDebug.app/Contents/MacOS/XUL +0x89a960]
Assignee | ||
Updated•6 years ago
|
Assignee | ||
Comment 1•6 years ago
|
||
This crash is caused by sending IPC message before the LivenessState becomes Start.
We can't call DoAsyncResolve in SocketProcessChild::AllocPDNSRequestChild, since the LivenessState turns to Start after AllocPDNSRequestChild.
Assignee | ||
Comment 2•6 years ago
|
||
Comment 3•6 years ago
|
||
There's a r+ patch which didn't land and no activity in this bug for 2 weeks.
:kershaw, could you have a look please?
For more information, please visit auto_nag documentation.
Assignee | ||
Comment 4•6 years ago
|
||
Description
•