Bug 1551593 - Call DoAsyncResolve after LivenessState is Start, r=dragana

--HG--
extra : rebase_source : ff35a97965273142b4204b9ea0f2a045032c071f